--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Activo.cs" />
+    <Compile Include="Entities\DetalleAE.cs" />
     <Compile Include="Entities\Empleado.cs" />
     <Compile Include="Enum\Depreciacion.cs" />
     <Compile Include="Enum\Estado.cs" />
