--- a/Domain/Domain.csproj
+++ b/Domain/Domain.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Enum\EstadoAct.cs" />
     <Compile Include="Interfaces\IActivoModel.cs" />
     <Compile Include="Interfaces\IDepreciacionModel.cs" />
+    <Compile Include="Interfaces\IdetalleModel.cs" />
     <Compile Include="Interfaces\IEmpleadoModel.cs" />
     <Compile Include="Interfaces\IModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
